--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -39,14 +39,15 @@
 
           <div class="navbar gap-2 justify-content-end">
             <button type="button" class="btn-close  navbar-toggler bg-body-tertiary  " data-bs-toggle="offcanvas"
-            data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
-            aria-label="Close"></button>
+              data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
+              aria-label="Close"></button>
             <a href="../index.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Home</a>
-            <a href="./upcoming_events.html" class="btn   btn-outline-light col-8 col-md-3 col-sm-3" role="button">Upcoming Events</a>
+            <a href="./upcoming_events.html" class="btn   btn-outline-light col-8 col-md-3 col-sm-3"
+              role="button">Upcoming Events</a>
             <a href=" #" class="btn  btn-secondary col-8 col-md-2 col-sm-2" role="button">Past Events</a>
             <a href="./contact.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Contact</a>
             <a href="./stats.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Stats</a>
-           
+
           </div>
         </div>
       </div>
@@ -74,10 +75,10 @@
 
       <div class="container-fluid col-12 ">
         <form class="navbar col-12 justify-content-end" id="form_categories">
-          
+
 
         </form>
-        <form class="d-flex"  role="search" id="search_form" >
+        <form class="d-flex" role="search" id="search_form">
 
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-new" type="submit">Search</button>
