--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -34,19 +34,20 @@
           data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end navbar-dark bg-dark col-12 col-md-12 col-sm-12abindex="-1" id="navbarOffcanvasLg"
-          aria-labelledby="navbarOffcanvasLgLabel">
+        <div class="offcanvas offcanvas-end navbar-dark bg-dark col-12 col-md-12 col-sm-12abindex=" -1"
+          id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
 
           <div class="navbar gap-2 justify-content-end col-12 col-md-12 col-sm-12">
             <button type="button" class="btn-close  navbar-toggler bg-body-tertiary " data-bs-toggle="offcanvas"
-            data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
-            aria-label="Close"></button>
+              data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
+              aria-label="Close"></button>
             <a href="../index.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Home</a>
             <a href="#" class="btn  btn-secondary col-8 col-md-3 col-sm-3" role="button">Upcoming Events</a>
-            <a href=" ./past_events.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Past Events</a>
+            <a href=" ./past_events.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Past
+              Events</a>
             <a href="./contact.html" class="btn btn-outline-light col-8 col-md-2 col-sm-2" role="button">Contact</a>
             <a href="./stats.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Stats</a>
-            
+
           </div>
         </div>
       </div>
@@ -72,10 +73,10 @@
 
       <div class="container-fluid col-12 ">
         <form class="navbar col-12 justify-content-end " id="form_categories">
-          
+
 
         </form>
-        <form class="d-flex"  role="search" id="search_form" >
+        <form class="d-flex" role="search" id="search_form">
 
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-new" type="submit">Search</button>
@@ -115,9 +116,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-    <script src="../scripts/data.js"></script>
+  <script src="../scripts/data.js"></script>
   <script src="../scripts/up.js"></script>
- 
+
 
 
 </body>
