--- a/index.html
+++ b/index.html
@@ -35,20 +35,23 @@
           data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end navbar-dark bg-dark col-12 col-md-12 col-sm-12 " tabindex="-1" id="navbarOffcanvasLg"
-          aria-labelledby="navbarOffcanvasLgLabel">
+        <div class="offcanvas offcanvas-end navbar-dark bg-dark col-12 col-md-12 col-sm-12 " tabindex="-1"
+          id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
 
           <div class="navbar gap-2 justify-content-end col-12 col-md-12 col-sm-12 " id="navbar_resp">
             <button type="button" class="btn-close  navbar-toggler bg-body-tertiary  " data-bs-toggle="offcanvas"
               data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
               aria-label="Close"></button>
             <a href="#" class="btn  btn-secondary col-8 col-md-2 col-sm-2 " role="button">Home</a>
-            <a href="./pages/upcoming_events.html " class="btn btn-outline-light  col-8 col-md-3 col-sm-3" id="button-up" role="button">Upcoming Events</a>
-            <a href=" ./pages/past_events.html" class="btn  btn-outline-light  col-8 col-md-2 col-sm-2" role="button">Past Events</a>
-            <a href="./pages/contact.html" class="btn btn-outline-light  col-8 col-md-2 col-sm-2" role="button">Contact</a>
+            <a href="./pages/upcoming_events.html " class="btn btn-outline-light  col-8 col-md-3 col-sm-3"
+              id="button-up" role="button">Upcoming Events</a>
+            <a href=" ./pages/past_events.html" class="btn  btn-outline-light  col-8 col-md-2 col-sm-2"
+              role="button">Past Events</a>
+            <a href="./pages/contact.html" class="btn btn-outline-light  col-8 col-md-2 col-sm-2"
+              role="button">Contact</a>
             <a href="./pages/stats.html" class="btn  btn-outline-light  col-8 col-md-2 col-sm-2" role="button">Stats</a>
 
-            
+
           </div>
         </div>
       </div>
