--- a/pages/details.html
+++ b/pages/details.html
@@ -59,7 +59,7 @@
   <main class="details">
 
 
-    <div class="container container-details" id="card_one">
+    <div class="container" id="card_one">
 
     </div>
 
