--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -34,8 +34,8 @@
         </button>
 
 
-        <div class="offcanvas offcanvas-end navbar-dark bg-dark col-12 col-md-12 col-sm-12 " tabindex="-1" id="navbarOffcanvasLg"
-          aria-labelledby="navbarOffcanvasLgLabel">
+        <div class="offcanvas offcanvas-end navbar-dark bg-dark col-12 col-md-12 col-sm-12 " tabindex="-1"
+          id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
 
           <div class="navbar gap-2 justify-content-end col-12 col-md-12 col-sm-12">
             <button type="button" class="btn-close  navbar-toggler bg-body-tertiary  " data-bs-toggle="offcanvas"
@@ -74,7 +74,7 @@
     <nav class="navbar line">
 
       <div class="container-fluid col-12  justify-content-between">
-        <form class="navbar col-12 col-md-9 justify-content-end  justify-content-md-evenly" id="form_categories">
+        <form class="navbar col-12 col-md-9 justify-content-end  justify-content-md-start" id="form_categories">
 
 
         </form>
