--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="https://kit.fontawesome.com/6a58896509.css" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/6a58896509.css" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./assets/styles/style.css">
 
@@ -59,10 +59,10 @@
 
   </header>
   <main>
-    <div class=" navbar line justify-content-between">
+    <div class=" navbar line justify-content-between " id="contenedor_faroles">
 
       <i class="bi bi-arrow-bar-left i_start"></i>
-      <div class="square one"></div>
+      <div class="square one" ></div>
       <div class="square two "></div>
       <div class="square three "></div>
       <div class="square one"></div>
@@ -73,8 +73,8 @@
       <div class="square one"></div>
       <div class="square three "></div>
 
-
-      <i class="bi bi-arrow-bar-right i_start"></i>
+      <i id="felicidad">🤩</i>
+     <!-- -->  <i class="bi bi-arrow-bar-right i_start"></i>
     </div>
 
 
@@ -130,7 +130,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-  <!-- <script src="./scripts/data.js"></script> -->
+
+  <script src="./scripts/prueba.js"></script>
+  
   <script src="./scripts/home.js"></script>
 
 
